[gd_scene load_steps=15 format=3 uid="uid://b1vyvuapvr0s5"]

[ext_resource type="Script" uid="uid://bdjr4gij2ddyk" path="res://Scenes/run/run.gd" id="1_5omsd"]
[ext_resource type="PackedScene" uid="uid://dq3n4yh2ut2qn" path="res://Scenes/map/map.tscn" id="1_n25hj"]
[ext_resource type="Resource" uid="uid://b1td0cjrcotse" path="res://Scenes/run/run_startup.tres" id="2_3ug3r"]
[ext_resource type="Resource" uid="uid://bsqhcifddrqn3" path="res://relic_pools/normal_relic_pool.tres" id="3_53j34"]
[ext_resource type="PackedScene" uid="uid://c4i60iaoqvrjd" path="res://Scenes/ui/health_ui.tscn" id="4_cflv6"]
[ext_resource type="PackedScene" uid="uid://b8nwlxqcw2jel" path="res://Scenes/ui/card_pile_button.tscn" id="4_wvotm"]
[ext_resource type="PackedScene" uid="uid://dkb23esns6un2" path="res://Scenes/ui/gold_ui.tscn" id="4_yuyfb"]
[ext_resource type="Texture2D" uid="uid://ceh77ad37fyk6" path="res://art/deck.png" id="5_7wesq"]
[ext_resource type="PackedScene" uid="uid://bnnfg3ece55j8" path="res://Scenes/ui/card_pile_view.tscn" id="6_1il0s"]
[ext_resource type="PackedScene" uid="uid://d2rx2syocw0vs" path="res://Scenes/relic_handler/relic_handler.tscn" id="8_7i8vh"]
[ext_resource type="PackedScene" uid="uid://bxu2ur7wuitlr" path="res://Scenes/relic_handler/relic_tooltip.tscn" id="10_rcnpp"]
[ext_resource type="Script" uid="uid://3km4v3mr5xh8" path="res://Scenes/run/pause_menu.gd" id="11_tujt5"]
[ext_resource type="PackedScene" uid="uid://bwth0wndrrgkq" path="res://Scenes/ui/level_text.tscn" id="13_ipcgg"]

[sub_resource type="LabelSettings" id="LabelSettings_53j34"]

[node name="Run" type="Node" groups=["run"]]
script = ExtResource("1_5omsd")
run_startup = ExtResource("2_3ug3r")
relic_pool = ExtResource("3_53j34")

[node name="Map" parent="." instance=ExtResource("1_n25hj")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
alignment = 1

[node name="MapButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Map"

[node name="BattleButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Battle"

[node name="ShopButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Shop"

[node name="TreasureButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Treasure"

[node name="RewardsButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Rewards"

[node name="CampfireButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Campfire"

[node name="EventButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Event"

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.505882)

[node name="VBoxContainer" type="VBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(256, 0)
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="BarItems" type="HBoxContainer" parent="TopBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2

[node name="HealthUI" parent="TopBar/VBoxContainer/BarItems" instance=ExtResource("4_cflv6")]
unique_name_in_owner = true
layout_mode = 2
show_max_hp = true

[node name="GoldUI" parent="TopBar/VBoxContainer/BarItems" instance=ExtResource("4_yuyfb")]
unique_name_in_owner = true
layout_mode = 2

[node name="Placeholder" type="Control" parent="TopBar/VBoxContainer/BarItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckButton" parent="TopBar/VBoxContainer/BarItems" node_paths=PackedStringArray("counter") instance=ExtResource("4_wvotm")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture_normal = ExtResource("5_7wesq")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="TopBar/VBoxContainer/BarItems/DeckButton"]
layout_mode = 0
offset_left = -2.0
offset_top = 11.0
offset_right = 8.0
offset_bottom = 17.0
text = "9"
horizontal_alignment = 1

[node name="RelicHandlerContainer" type="HBoxContainer" parent="TopBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RelicHandler" parent="TopBar/VBoxContainer/RelicHandlerContainer" instance=ExtResource("8_7i8vh")]
unique_name_in_owner = true
layout_mode = 2

[node name="DeckView" parent="TopBar" instance=ExtResource("6_1il0s")]
unique_name_in_owner = true
visible = false

[node name="RelicTooltip" parent="TopBar" instance=ExtResource("10_rcnpp")]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 99
visible = false
script = ExtResource("11_tujt5")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.74902)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -20.0
offset_right = 47.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_53j34")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackToGameButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 16)
layout_mode = 2
text = "Back"

[node name="SaveAndQuitButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Main Menu"

[node name="ActText" parent="." instance=ExtResource("13_ipcgg")]
visible = false
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -34.0
offset_bottom = 2.0
grow_vertical = 2
size_flags_horizontal = 4
